Adding Token support

--- a/Twilio.Api.Net35.Tests/Twilio.Api.Net35.Tests.csproj
+++ b/Twilio.Api.Net35.Tests/Twilio.Api.Net35.Tests.csproj
@@ -99,6 +99,7 @@
     <Compile Include="QueueTests.cs" />
     <Compile Include="RecordingTests.cs" />
     <Compile Include="SmsTests.cs" />
+    <Compile Include="TokenTest.cs" />
     <Compile Include="TranscriptionTests.cs" />
     <Compile Include="UsageTests.cs" />
     <Compile Include="UsageTriggersTests.cs" />
