--- a/Twilio.Api.Pcl.Tests/Twilio.Api.Pcl.Tests.csproj
+++ b/Twilio.Api.Pcl.Tests/Twilio.Api.Pcl.Tests.csproj
@@ -109,10 +109,24 @@
     <Compile Include="AccountTests.cs" />
     <Compile Include="ApplicationTests.cs" />
     <Compile Include="AuthorizedConnectAppsTests.cs" />
+    <Compile Include="AvailablePhoneNumberTests.cs" />
+    <Compile Include="CallTests.cs" />
+    <Compile Include="ConferenceParticipantTests.cs" />
+    <Compile Include="ConferenceTests.cs" />
+    <Compile Include="ConnectAppTests.cs" />
     <Compile Include="Credentials.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="IncomingPhoneNumberTests.cs" />
+    <Compile Include="NotificationTests.cs" />
+    <Compile Include="OutgoingCallerIdTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueueTests.cs" />
+    <Compile Include="RecordingTests.cs" />
+    <Compile Include="SmsTests.cs" />
+    <Compile Include="TranscriptionTests.cs" />
+    <Compile Include="UsageTests.cs" />
+    <Compile Include="UsageTriggersTests.cs" />
     <Compile Include="Utilities.cs">
       <SubType>Code</SubType>
     </Compile>
