--- a/Twilio.Api.Net35.Tests/Twilio.Api.Net35.Tests.csproj
+++ b/Twilio.Api.Net35.Tests/Twilio.Api.Net35.Tests.csproj
@@ -84,6 +84,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountTests.cs" />
+    <Compile Include="AddressTests.cs" />
     <Compile Include="ApplicationTests.cs" />
     <Compile Include="AuthorizedConnectAppsTests.cs" />
     <Compile Include="AvailablePhoneNumberTests.cs" />
