--- a/Twilio.Api.Shared/Twilio.Api.Shared.csproj
+++ b/Twilio.Api.Shared/Twilio.Api.Shared.csproj
@@ -61,6 +61,10 @@
     <Compile Include="Model\Account.cs" />
     <Compile Include="Model\AccountResult.cs" />
     <Compile Include="Model\AccountStatus.cs" />
+    <Compile Include="Model\Address.cs" />
+    <Compile Include="Model\AddressListRequest.cs" />
+    <Compile Include="Model\AddressOptions.cs" />
+    <Compile Include="Model\AddressResult.cs" />
     <Compile Include="Model\Application.cs" />
     <Compile Include="Model\ApplicationOptions.cs" />
     <Compile Include="Model\ApplicationResult.cs" />
@@ -87,6 +91,8 @@
     <Compile Include="Model\CredentialListResult.cs" />
     <Compile Include="Model\CredentialResult.cs" />
     <Compile Include="Model\DeleteStatus.cs" />
+    <Compile Include="Model\DependentPhoneNumber.cs" />
+    <Compile Include="Model\DependentPhoneNumberResult.cs" />
     <Compile Include="Model\DequeueStatus.cs" />
     <Compile Include="Model\Domain.cs" />
     <Compile Include="Model\DomainOptions.cs" />
