Changing Media, Messages, Recordings, Sandbox and Sip methods to Async

--- a/Twilio.Api.Pcl.Tests/Twilio.Api.Pcl.Tests.csproj
+++ b/Twilio.Api.Pcl.Tests/Twilio.Api.Pcl.Tests.csproj
@@ -125,6 +125,7 @@
     <Compile Include="QueueTests.cs" />
     <Compile Include="RecordingTests.cs" />
     <Compile Include="SmsTests.cs" />
+    <Compile Include="TokenTests.cs" />
     <Compile Include="TranscriptionTests.cs" />
     <Compile Include="UsageTests.cs" />
     <Compile Include="UsageTriggersTests.cs" />
