--- a/Twilio.Api.TaskRouter.Pcl/Twilio.Api.TaskRouter.Pcl.csproj
+++ b/Twilio.Api.TaskRouter.Pcl/Twilio.Api.TaskRouter.Pcl.csproj
@@ -50,6 +50,7 @@
     </Compile>
     <Compile Include="Activities.cs" />
     <Compile Include="Core.cs" />
+    <Compile Include="Events.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reservations.cs" />
     <Compile Include="TaskQueues.cs" />
