--- a/Twilio.Api.Pcl.Tests/packages.config
+++ b/Twilio.Api.Pcl.Tests/packages.config
@@ -1,10 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="JWT.Portable" version="1.0.1-beta" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
+  <package id="Mono.Security" version="3.2.3.0" targetFramework="net45" />
   <package id="Moq" version="4.2.1408.0717" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net451" />
   <package id="NUnitTestAdapter" version="1.1" targetFramework="net451" />
+  <package id="PCLCrypto" version="0.5.2.14286" targetFramework="net45" />
+  <package id="Validation" version="2.0.5.14286" targetFramework="net45" />
 </packages>
