--- a/Twilio.Api.TaskRouter.Pcl/packages.config
+++ b/Twilio.Api.TaskRouter.Pcl/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="JWT.Portable" version="1.0.1-beta" targetFramework="portable-net403+sl50+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="portable-net403+sl50+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="portable-net403+sl50+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable-net403+sl50+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
+  <package id="PCLCrypto" version="0.5.2.14286" targetFramework="portable-net403+sl50+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
+  <package id="Validation" version="2.0.5.14286" targetFramework="portable-net403+sl50+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
 </packages>
