--- a/Twilio.TaskRouter.nuspec
+++ b/Twilio.TaskRouter.nuspec
@@ -13,14 +13,15 @@
         </releaseNotes>
         <language>en-US</language>
         <tags>REST SMS voice telephony phone twilio twiml ASPNETWEBPAGES</tags>
-        <group targetFramework="portable-net403+sl5+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1">
-          <dependency id="Twilio" version="4.0.1-beta" />
-          <dependency id="JWT.Portable" version="1.0.0-beta" />
-        </group>
-        <group targetFramework=".NETFramework4.0">
-          <dependency id="Twilio" version="4.0.1-beta" />
-          <dependency id="JWT" version="1.3.2" />
-        </group>
-
+        <dependencies>
+          <group targetFramework="portable-net403+sl5+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1">
+            <dependency id="Twilio" version="4.0.1-beta" />
+            <dependency id="JWT.Portable" version="1.0.0-beta" />
+          </group>
+          <group targetFramework=".NETFramework4.0">
+            <dependency id="Twilio" version="4.0.1-beta" />
+            <dependency id="JWT" version="1.3.2" />
+          </group>
+        </dependencies>
     </metadata>
 </package>
