--- a/Twilio.Api.TaskRouter.Pcl/Twilio.Api.TaskRouter.Pcl.csproj
+++ b/Twilio.Api.TaskRouter.Pcl/Twilio.Api.TaskRouter.Pcl.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{A7A7BBA1-07E9-413A-A162-333430F299C5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Twilio.Api.TaskRouter.Pcl</RootNamespace>
-    <AssemblyName>Twilio.Api.TaskRouter.Pcl</AssemblyName>
+    <RootNamespace>Twilio.TaskRouter</RootNamespace>
+    <AssemblyName>Twilio.Api.TaskRouter</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
