--- a/Twilio.Api.TaskRouter.Net35/packages.config
+++ b/Twilio.Api.TaskRouter.Net35/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="JWT" version="1.3.2" targetFramework="net451" />
+  <package id="MSBuildTasks" version="1.4.0.88" targetFramework="net35" />
 </packages>
