--- a/Twilio.Api.Lookups.Pcl/Twilio.Api.Lookups.Pcl.csproj
+++ b/Twilio.Api.Lookups.Pcl/Twilio.Api.Lookups.Pcl.csproj
@@ -16,6 +16,7 @@
     <TargetFrameworkProfile>Profile147</TargetFrameworkProfile>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <NuGetPackageImportStamp>8a58b9bf</NuGetPackageImportStamp>
+	<SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
