--- a/Twilio.Api.TaskRouter.Shared/Twilio.Api.TaskRouter.Shared.csproj
+++ b/Twilio.Api.TaskRouter.Shared/Twilio.Api.TaskRouter.Shared.csproj
@@ -44,7 +44,7 @@
     <Compile Include="Model\Activity.cs" />
     <Compile Include="Model\ActivityResult.cs" />
     <Compile Include="Model\Event.cs" />
-    <Compile Include="Model\EventListResult.cs" />
+    <Compile Include="Model\EventListRequest.cs" />
     <Compile Include="Model\EventResult.cs" />
     <Compile Include="Model\Reservation.cs" />
     <Compile Include="Model\ReservationResult.cs" />
