Another gitignore update to make it more specific

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 
 #Project Specific
 **/VersionInfo.cs
-**/version.txt
-**/version.*.txt
+**/Properties/version.txt
+**/Properties/version.*.txt
 /p
 
 
