--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,20 @@ install:
   - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
 script:
   - xbuild /p:Configuration=Release ./SimpleRestClient.Net35/SimpleRestClient.Net35.csproj
-  - xbuild /p:Configuration=Release ./SimpleRestClient.Pcl/SimpleRestClient.Pcl.csproj
+#  - xbuild /p:Configuration=Release ./SimpleRestClient.Pcl/SimpleRestClient.Pcl.csproj
 
   - xbuild /p:Configuration=Release ./Twilio.Api.Net35/Twilio.Api.Net35.csproj
-  - xbuild /p:Configuration=Release ./Twilio.Api.Net35.Tests/Twilio.Api.Net35.csproj
-
-  - xbuild /p:Configuration=Release ./Twilio.Api.Pcl/Twilio.Api.Pcl.csproj
-  - xbuild /p:Configuration=Release ./Twilio.Api.Pcl.Tests/Twilio.Api.Pcl.csproj
+  - xbuild /p:Configuration=Release ./Twilio.Api.Net35.Tests/Twilio.Api.Net35.Tests.csproj
+#  - xbuild /p:Configuration=Release ./Twilio.Api.Pcl/Twilio.Api.Pcl.csproj
+#  - xbuild /p:Configuration=Release ./Twilio.Api.Pcl.Tests/Twilio.Api.Pcl.Tests.csproj
 
   - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./Twilio.Api.Net35.Tests/bin/Release/Twilio.Api.Net35.Tests.dll
-  - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./Twilio.Api.Pcl.Tests/bin/Release/Twilio.Api.Pcl.Tests.dll
+#  - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./Twilio.Api.Pcl.Tests/bin/Release/Twilio.Api.Pcl.Tests.dll
+
+#  - xbuild /p:Configuration=Release ./Twilio.Api.TaskRouter.Net35/Twilio.Api.TaskRouter.Net35.csproj
+#  - xbuild /p:Configuration=Release ./Twilio.Api.TaskRouter.Net35.Tests/Twilio.Api.TaskRouter.Net35.Tests.csproj
+#  - xbuild /p:Configuration=Release ./Twilio.Api.TaskRouter.Pcl/Twilio.Api.TaskRouter.Pcl.csproj
+#  - xbuild /p:Configuration=Release ./Twilio.Api.TaskRouter.Pcl.Tests/Twilio.Api.TaskRouter.Pcl.Tests.csproj
+
+#  - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./Twilio.Api.TaskRouter.Net35.Tests/bin/Release/Twilio.Api.TaskRouter.Net35.Tests.dll
+#  - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./Twilio.Api.TaskRouter.Pcl.Tests/bin/Release/Twilio.Api.TaskRouter.Pcl.Tests.dll
